<resources>
    <string name="app_name">appResources_week3</string>
    <string name="label_username">Username: </string>
    <string name="label_password">Password: </string>
    <string name="hint_username">Enter user name</string>
    <string name="hint_password">password</string>
    <string name="btn_login">LOGIN</string>
    <string name="title_portrait">Login portrait</string>
    <string name="title_landscape">Login landscape</string>
    <string name="forgotPassword">Forgot Password?</string>
</resources>